--- a/Variant1-2.html
+++ b/Variant1-2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
    <head>
-	 <script src="http://code.jquery.com/jquery-latest.js">
+	 <script src="jquery-3.4.1.min.js">
 	 </script>
 	 <script>
 	     $(document).ready(function() {
