--- a/Variant1-2.html
+++ b/Variant1-2.html
@@ -5,7 +5,7 @@
 	 </script>
 	 <script>
 	     $(document).ready(function() {
-			 $("img.robot").mouseenter(function() {  
+			 $("td>img").mouseenter(function() {  
 			     $(this).hide();
 				 });
 			 }); 
@@ -21,16 +21,18 @@
 
 		<table width=600 height=220 border=5 bordercolor="DodgerBlue">
 		  <tr><td><b>1</b></td><td><b>2</b></td><td><b> 3</b></td><td><b>4</b></td></tr>
-		  <tr><td><img class="robot" src="Картинки/20-things-11.jpg"height="70"></td><td></td><td> 12</td><td> Java</td></tr>
-		  <tr><td>***</td><td><img class="robot" src="Картинки/why-js.png"height="70"></td><td> <img class="robot" src="Картинки/icon-js.png"height="70"></td><td><img class="robot" src="Картинки/20-things-11.jpg" height="70"></td></tr>
+		  <tr><td><img src="Картинки/20-things-11.jpg"height="70"></td><td></td><td> 12</td><td> Java</td></tr>
+		  <tr><td>***</td><td><img src="Картинки/why-js.png"height="70"></td><td> <img src="Картинки/icon-js.png"height="70"></td><td><img src="Картинки/20-things-11.jpg" height="70"></td></tr>
 		  <tr><td></td><td>@</td><td> 8 мес.</td><td></td></tr>
-		  <tr><td><img class="robot" src="Картинки/why-js.png"height="70"></td><td></td><td>///</td><td><img class="robot" src="Картинки/evolution.jpg"height="70"></td></tr>
+		  <tr><td><img src="Картинки/why-js.png"height="70"></td><td></td><td>///</td><td><img src="Картинки/evolution.jpg"height="70"></td></tr>
 		  <tr><td>&& </td><td></td><td> HTML</td><td></td></tr>
 		  <tr><td>JS</td><td>Tree</td><td> ?</td><td></td></tr>
-		  <tr><td><img class="robot" src="Картинки/evolution.jpg"height="70"></td><td></td><td><img class="robot" src="Картинки/20-things-11.jpg"height="70"></td><td>what</td></tr>
+		  <tr><td><img src="Картинки/evolution.jpg"height="70"></td><td></td><td><img src="Картинки/20-things-11.jpg"height="70"></td><td>what</td></tr>
 		</table><br>
 
      <img src="Картинки/20-things-11.jpg"height="100">
    </body>
 </html>
+
+
 
